hphp/hack/test/typecheck/assignment_sequencing/assign_in_conj_disj_of_conditionals.php.like_types.exp
File "assign_in_conj_disj_of_conditionals.php", line 3, characters 21-26:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 25, characters 21-23:
Expected int
File "assign_in_conj_disj_of_conditionals.php", line 3, characters 21-26:
But got string
File "assign_in_conj_disj_of_conditionals.php", line 4, characters 19-19:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 26, characters 24-29:
Expected string
File "assign_in_conj_disj_of_conditionals.php", line 4, characters 19-19:
But got int
File "assign_in_conj_disj_of_conditionals.php", line 3, characters 21-26:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 25, characters 21-23:
Expected int
File "assign_in_conj_disj_of_conditionals.php", line 3, characters 21-26:
But got string
File "assign_in_conj_disj_of_conditionals.php", line 4, characters 19-19:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 26, characters 24-29:
Expected string
File "assign_in_conj_disj_of_conditionals.php", line 4, characters 19-19:
But got int
File "assign_in_conj_disj_of_conditionals.php", line 14, characters 21-26:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 25, characters 21-23:
Expected int
File "assign_in_conj_disj_of_conditionals.php", line 14, characters 21-26:
But got string
File "assign_in_conj_disj_of_conditionals.php", line 15, characters 19-19:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 26, characters 24-29:
Expected string
File "assign_in_conj_disj_of_conditionals.php", line 15, characters 19-19:
But got int
File "assign_in_conj_disj_of_conditionals.php", line 14, characters 21-26:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 25, characters 21-23:
Expected int
File "assign_in_conj_disj_of_conditionals.php", line 14, characters 21-26:
But got string
File "assign_in_conj_disj_of_conditionals.php", line 15, characters 19-19:
Invalid argument (Typing[4110])
File "assign_in_conj_disj_of_conditionals.php", line 26, characters 24-29:
Expected string
File "assign_in_conj_disj_of_conditionals.php", line 15, characters 19-19:
But got int
